[gd_scene load_steps=2 format=3 uid="uid://dver0mc4ju4q4"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_mf1b3"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_mf1b3")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="vlay_menu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -43.5
offset_right = 41.5
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2

[node name="name_of_the_game" type="Label" parent="vlay_menu"]
layout_mode = 2
text = "UltraPlatformer"
horizontal_alignment = 1

[node name="new_game" type="Button" parent="vlay_menu"]
layout_mode = 2
text = "Начать приключение"

[node name="settings" type="Button" parent="vlay_menu"]
layout_mode = 2
text = "Настройки (no_active)"

[node name="exit_game" type="Button" parent="vlay_menu"]
layout_mode = 2
text = "Выйти на рабочий стол"

[node name="vlay_level_selection" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 960.0
offset_top = -46.5
offset_right = 1075.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="vlay_level_selection"]
layout_mode = 2
text = "Выбор уровня"

[node name="GridContainer" type="GridContainer" parent="vlay_level_selection"]
layout_mode = 2
size_flags_vertical = 0
columns = 4

[node name="tutorial" type="Button" parent="vlay_level_selection/GridContainer"]
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="vlay_level_selection/GridContainer"]
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="vlay_level_selection/GridContainer"]
layout_mode = 2
text = "3"

[node name="Button4" type="Button" parent="vlay_level_selection/GridContainer"]
layout_mode = 2
text = "4"

[node name="back_to_menu" type="Button" parent="vlay_level_selection"]
layout_mode = 2
text = "Назад"

[connection signal="button_up" from="vlay_menu/new_game" to="." method="_on_new_game_button_up"]
[connection signal="button_up" from="vlay_menu/exit_game" to="." method="_on_exit_game_button_up"]
[connection signal="button_up" from="vlay_level_selection/GridContainer/tutorial" to="." method="_on_tutorial_button_up"]
[connection signal="button_up" from="vlay_level_selection/back_to_menu" to="." method="_on_back_to_menu_button_up"]
